apps/base/service-2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-2
  labels:
    istio-injection: enabled
