apps/base/service-2/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-2
  namespace: service-2
spec:
  host: service-2-nginx.service-2.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
